# ssi-stock-mcp-server

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
.github/: FUNDING.yml  docker.yaml
src/ssi_stock_mcp_server/: __init__.py  server.py
